# cuif

./: .gitignore  AGENTS.md  README.md  pyproject.toml  report.md
benchmarks/office_cert_temporal_poc/: README.md  pyproject.toml  sources.yml  task_manifest.yml
benchmarks/office_cert_temporal_poc/docs/: hwp_mcp_setup.md
benchmarks/office_cert_temporal_poc/scripts/: common.py  fetch_sources.py  inspect_artifacts.py  install_hwp_mcp.py  prepare_tasks.py  run_codex_task.py
literature_review/: README.md  agents_and_training_data.md  layout_constraint_positioning.md  novelty_and_contribution.md  office_family_benchmarks.md  partial_multiturn_multimodal_eval.md  repo_audit_sources.md
meetings/kickoff/: README.md  slide-outline.md  slides.md  speaker-notes.md
poc/: README.md  evaluator-verification-templates.md  layout-constraint-multimodal-review.md  layout-constraint-task-evidence.md  layout_constraint_multimodal_review_vlm_response.json  poc-doc.md  research-draft.md  task-generation-guide.md
poc/layout_constraint_final_verification/: final_summary_20260504.md
poc/tasks/_layout_constraint_evidence/: README.md
poc/tasks/annotated_layout_repair_deck/: README.md  generate_artifacts.py  (+2 more)
scripts/: generate_toy_fixtures.py
src/cuif_eval/: __init__.py  agent_runners.py  artifacts.py  bundles.py  cli.py  judge_client.py  reports.py  runner.py  schema.py  scoring.py  types.py
tests/: conftest.py  test_artifacts.py  test_bundles.py  test_judge_client.py  test_pptx_checks.py  test_rendering.py  test_reports.py  test_runner_mock.py  test_schema.py  test_scoring.py
(+158 files in other folders)
