[project]
name = "cuif"
version = "0.1.0"
description = "CUIF proof-of-concept office artifact evaluation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-pptx>=1.0.2",
  "PyYAML>=6.0.2",
]

[project.scripts]
cuif-eval = "cuif_eval.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/cuif_eval"]
